Fix crash when DesktopNames isn't set

BUG: 334159
FIXED-IN: 4.11.10